--- a/language/move-prover/tools/mutation/Cargo.toml
+++ b/language/move-prover/tools/mutation/Cargo.toml
@@ -6,10 +6,15 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-structopt = "0.3.21"
-anyhow = "1.0.38"
-
+#diem dependencies
 move-model = { path = "../../../move-model" }
 bytecode = {path = "../../bytecode"}
 move-prover = { path = "../.." }
 move-lang = { path = "../../../move-lang" }
+move-ir-types = {path = "../../../move-ir/types"}
+
+# external dependencies
+structopt = "0.3.21"
+anyhow = "1.0.38"
+log = { version = "0.4.14", features = ["serde"] }
+pbr = "1.0.3"
