--- a/language/move-prover/tools/mutation/Cargo.toml
+++ b/language/move-prover/tools/mutation/Cargo.toml
@@ -18,3 +18,5 @@ structopt = "0.3.21"
 anyhow = "1.0.38"
 log = { version = "0.4.14", features = ["serde"] }
 pbr = "1.0.3"
+rand = "0.8.4"
+rand_chacha = "0.3.1"
