--- a/language/move-lang/Cargo.toml
+++ b/language/move-lang/Cargo.toml
@@ -17,6 +17,10 @@ petgraph = "0.5.1"
 walkdir = "2.3.1"
 tempfile = "3.2.0"
 once_cell = "1.7.2"
+num = "0.4"
+num-integer = "0.1"
+rand = "0.8.4"
+closure = "0.3.0"
 
 move-binary-format = { path = "../move-binary-format" }
 move-core-types = { path = "../move-core/types" }
