--- a/language/move-prover/tools/mutation/Cargo.toml
+++ b/language/move-prover/tools/mutation/Cargo.toml
@@ -14,6 +14,7 @@ move-lang = { path = "../../../move-lang" }
 move-ir-types = {path = "../../../move-ir/types"}
 
 # external dependencies
+num = "0.4"
 structopt = "0.3.21"
 anyhow = "1.0.38"
 log = { version = "0.4.14", features = ["serde"] }
